<resources>

    /* Login */
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_login">Accedi</string>
    <string name="login_button_signup">Registrati</string>
    <string name="login_toast_welcome_back">Bentornato</string>
    <string name="login_toast_autentication_failed">Autenticazione fallita</string>
    <string name="login_input_not_ok">Informazioni non valide</string>

    /* Sign up */
    <string name="sign_up_hint_email">Email</string>
    <string name="sign_up_hint_password">Password</string>
    <string name="sign_up_hint_password_repeat">Ripeti password</string>
    <string name="sign_up_hint_sex">Sesso</string>
    <string name="sign_up_hint_height">Altezza (in cm)</string>
    <string name="sign_up_hint_weight">Peso (in kg)</string>
    <string name="sign_up_hint_birth_date">Data di  nascita</string>
    <string name="sign_up_button_sign_up">Registrati</string>
    <string name="sign_up_toast_welcome">Benvenuto</string>
    <string name="sign_up_toast_register_success">Registrazione effettuata con successo</string>
    <string name="sign_up_toast_register_failed">Registrazione fallita, riprovare. La password deve contenere numeri e caratteri speciali</string>
    <string-array name="array_sex">
        <item>Maschio</item>
        <item>Femmina</item>
    </string-array>
    <string name="sex_1">Maschio</string>
    <string name="sex_2">Femmina</string>

    /* Navigation drawer */
    <string name="app_name">MyFoodPocket</string>
    <string name="nav_header_desc">Navigation header logo</string>
    <string name="action_settings">Settings</string>

    /* Menu */
    <string name="menu_home">Home</string>
    <string name="menu_profile">Il mio profilo</string>
    <string name="menu_characteristics">Le mie caratteristiche</string>
    <string name="menu_results">I miei risultati</string>
    <string name="menu_food_plan">Piano alimentare</string>
    <string name="menu_exit">Esci</string>

    /* Profile */
    <string name="profile_hint_height">Altezza</string>
    <string name="profile_hint_weight">Peso</string>
    <string name="profile_button_modify">Modifica profilo</string>
    <string name="profile_toast_user_fail">Errore nel reperimento dell\'utente</string>
    <string name="profile_toast_modify_success">Modifica avvenuta con successo</string>
    <string name="profile_textview_my_profile">Il mio profilo</string>
    <string name="profile_textview_email">Email:</string>
    <string name="profile_textview_sex">Sesso:</string>
    <string name="profile_textview_height">Altezza:</string>
    <string name="profile_textview_weight">Peso:</string>
    <string name="profile_textview_birth_date">Data di nascita:</string>
    <string name="profile_check_input_not_ok">Compilare il form correttamente</string>

    /* Main */
    <string name="basal_metabolic_rate">Metabolismo basale</string>
    <string name="daily_calories_need">Apporto calorico giornaliero</string>
    <string name="unit_of_measure">kcal</string>
    <string name="main_set_date">Data</string>
    <string name="main_null_meals">Aggiungi un pasto al tuo diario</string>
    <string name="main_row_category">Categoria</string>
    <string name="main_row_description">Descrizione</string>
    <string name="main_row_calories">Calorie</string>
    <string name="main_category_breakfast">Colazione</string>
    <string name="main_category_snack_morning">Merenda a metà mattina</string>
    <string name="main_category_lunch">Pranzo</string>
    <string name="main_category_snack_afternoon">Merenda a metà pomeriggio</string>
    <string name="main_category_dinner">Cena</string>
    <string name="main_category_other">Altro</string>

    /* Sign up / Profile */
    <string-array name="work_heaviness_choices">
        <item>Attività lavorativa leggera</item>
        <item>Attività lavorativa moderata</item>
        <item>Attività lavorativa pesante</item>
    </string-array>
    <string name="profile_back_button">Indietro</string>
    <string name="work_heaviness_1">Attività lavorativa leggera</string>
    <string name="work_heaviness_2">Attività lavorativa moderata</string>
    <string name="work_heaviness_3">Attività lavorativa pesante</string>
    <string name="main_calories_taken">Calorie assunte</string>
    <string name="add_meal_text_view_add_meal">Aggiungi un pasto</string>
    <string name="sign_up_input_not_ok">Informazioni non valide, riprovare</string>
    <string name="sign_up_not_adult">Devi essere maggiorenne per poterti iscrivere</string>
    <string-array name="sport_practiced">
        <item>Sport praticato</item>
        <item>Sport non praticato</item>
    </string-array>

    /* AddMealActivity */
    <string name="main_toast_error_age">Errore nel calcolo dell\'età</string>
    <string name="add_meal_date">Data</string>
    <string name="add_meal_category">Categoria</string>
    <string name="add_meal_description">Descrizione</string>
    <string name="add_meal_calories">Calorie</string>
    <string name="add_meal_button_add_meal">Aggiungi pasto</string>
    <string name="add_meal_success">Pasto aggiunto correttamente</string>
    <string name="add_meal_failed">Inserimento del pasto fallito</string>
    <string name="characteristics_basal_metabolism">Metabolismo basale</string>
    <string name="characteristics_daily_calories">Fabbisogno calorico giornaliero</string>
    <string name="characteristics_body_mass_index">Indice di massa corporea</string>
    <string name="characteristics_my_characteristics_print">Le mie caratteristiche</string>
    <string name="add_meal_button_take_photo">Scatta una foto</string>
    <string name="add_meail_insert_text">Inserisci qui la descrizione</string>
    <string name="add_meal_pic_taken_string">Foto scattata</string>
    <string name="add_meal_input_control_not_ok">Compilare correttamente il form, le calorie non devono contenere punti o virgole</string>
    <string-array name="add_meal_category_choices">
        <item>Colazione</item>
        <item>Merenda a metà mattina</item>
        <item>Pranzo</item>
        <item>Merenda a metà pomeriggio</item>
        <item>Cena</item>
        <item>Altro</item>
    </string-array>

    /* MealDetail */
    <string name="meal_detail_delete_success">Pasto cancellato correttamente</string>
    <string name="meal_detail_picture_error">Errore nel reperimento della foto</string>
    <string name="meal_detail_delete_fail">Errore nel reperimento della foto</string>
    <string name="meal_detail_category">Categoria</string>
    <string name="meal_detail_description">Descrizione</string>
    <string name="meal_detail_calories">Calorie</string>

    /* FoodPlanActivity */
    <string name="food_plan_download">Scarica piano alimentare</string>
    <string name="food_plan_download_started">Download del piano alimentare...</string>
    <string name="food_plan_download_finished">Piano alimentare scaricato nella cartella Download</string>
    <string name="characteristics_download_food_plan">Scarica piano alimentare</string>
    <string name="sign_up_insert_birth_date">Clicca qui per inserire</string>

    /* NoInternetConnectionActivity */
    <string name="no_internet_connection">Connessione a Internet assente</string>
    <string name="no_internet_connection_retry">Riprova</string>
    <string name="no_internet_connection_still_not_available">Connessione ancora non disponibile, riprovare</string>
    <string name="no_internet_connection_not_available">Connessione non disponibile, riprovare</string>

    /* EditMealActivity */
    <string name="edit_meal_text_view_edit_meal">Modifica pasto</string>
    <string name="edit_meal_date">Data</string>
    <string name="edit_meal_category">Categoria</string>
    <string name="edit_meal_description">Descrizione</string>
    <string name="edit_meail_insert_text">Inserisci qui la descrizione</string>
    <string name="edit_meal_calories">Calorie</string>
    <string name="edit_meal_button_take_photo">Scatta una foto</string>
    <string name="edit_meal_button_edit_meal">Modifica pasto</string>
    <string name="edit_meal_input_control_not_ok">Compilare correttamente il form, le calorie non devono contenere punti o virgole</string>
    <string-array name="edit_meal_category_choices">
        <item>Colazione</item>
        <item>Merenda a metà mattina</item>
        <item>Pranzo</item>
        <item>Merenda a metà pomeriggio</item>
        <item>Cena</item>
        <item>Altro</item>
    </string-array>
    <string name="edit_category_name_breakfast">Colazione</string>
    <string name="edit_category_name_snack_morning">Merenda a metà mattina</string>
    <string name="edit_category_name_lunch">Pranzo</string>
    <string name="edit_category_name_snack_afternoon">Merenda a metà pomeriggio</string>
    <string name="edit_category_name_dinner">Cena</string>
    <string name="edit_category_name_other">Altro</string>
    <string name="edit_meal_pic_taken_string">Foto scattata</string>
    <string name="edit_meal_button_delete_photo">Elimina foto</string>
    <string name="edit_meal_pic_delete_string">La foto verrà eliminata</string>
    <string name="edit_meal_no_pic_found_string">Nessuna foto da eliminare trovata</string>

</resources>