<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/myfoodpocketlogo" />
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="mariorossi@gmail.com"
                android:hint="@string/sign_up_hint_email"/>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="prova123!"
                android:hint="@string/sign_up_hint_password"/>
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="prova123!"
                android:hint="@string/sign_up_hint_password_repeat"/>
            <Spinner
                android:layout_marginTop="10dp"
                android:id="@+id/sign_up_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/array_sex" />
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/sign_up_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="172"
                android:hint="@string/sign_up_hint_height"/>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/sign_up_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="73"
                android:hint="@string/sign_up_hint_weight"/>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/sign_up_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="11/05/1998"
                android:hint="@string/sign_up_hint_birth_date"/>
            <Spinner
                android:id="@+id/spinner_work_heaviness"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/work_heaviness_choices" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/spinner_sport_practiced"
                android:entries="@array/sport_practiced" />
            <Button
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="signUpOnClick"
                android:text="@string/sign_up_button_sign_up"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>