<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditMealActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_meal_text_view_edit_meal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginLeft="7dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_meal_date" />
            <TextView
                android:layout_marginLeft="7dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_meal_date_print"
                android:text="-" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginLeft="7dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_meal_category" />
            <Spinner
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/edit_meal_spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/edit_meal_category_choices" />
        </LinearLayout>
        <TextView
            android:layout_marginLeft="7dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_meal_description" />
        <EditText
            android:hint="@string/edit_meail_insert_text"
            android:layout_marginLeft="7dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_meal_edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="7dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_meal_calories" />
            <EditText
                android:hint="0"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/edit_meal_edit_text_calories"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="takePhoto"
                android:text="@string/edit_meal_button_take_photo" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_meal_pic_taken"
                android:textSize="20dp" />
        </LinearLayout>
        <Button
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_meal_button_edit_meal"
            android:onClick="action_button_on_click" />
    </LinearLayout>

</LinearLayout>